@@ -1015,3 +1015,4 @@ Added a field to the Website Options page for setting the maximum run-time for P
 If the post-modification or creation script for a domain fails, its output is now displayed as an error message.
 Validation now checks that each domain's Unix user and group quotas match what Virtualmin expects.
 Added a DNS template option to have a DNSSEC key generated for new domains, and records automatically signed.
+Email sent to domain owners is now properly encoded so that non-ASCII characters can be included.
